src/test/deca/context/valid/created/big_cond.deca
{
if (false || true || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || false || true || false || false || false || false || false){
    println("OK");
} else {
    println("NON");
}
}
