src/test/deca/context/invalid/created/wrong_type_condition_if_FLOAT.deca
{
    if (5.3) {
        println("true");
    } else {
        println("false");
    }
}